--- a/app/src/main/res/layout/fragment_register_phone.xml
+++ b/app/src/main/res/layout/fragment_register_phone.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:layout_height="50dp">
         <view.InputText
             android:layout_width="0dp"
@@ -19,19 +20,22 @@
             android:layout_height="50dp"
             app:text="验证码">
         </view.InputText>
-        <TextView
+        <Button
+            android:id="@+id/rp_get_code"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="match_parent"
+            android:padding="5dp"
+            android:layout_height="30dp"
             android:gravity="center"
             android:layout_marginRight="20dp"
+            android:background="@drawable/white_btn"
             android:text="获取验证码"/>
     </LinearLayout>
 
-    <TextView
+    <Button
         android:id="@+id/rp_next"
         android:layout_width="match_parent"
-        android:background="@drawable/shape_login_btn"
+        android:background="@drawable/shape_theme_btn"
         android:textColor="@color/white"
         android:layout_margin="20dp"
         android:gravity="center"
