//增加首页轮播广告和指示器

--- a/app/src/main/res/layout/view_input_text.xml
+++ b/app/src/main/res/layout/view_input_text.xml
@@ -17,7 +17,7 @@
             android:layout_gravity="center"/>
         <EditText
             android:id="@+id/it_input"
-
+            android:textSize="14sp"
             android:layout_width="match_parent"
             android:textColor="@color/fontColor"
             android:layout_height="match_parent"
