--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,11 +9,30 @@
         android:layout_height="50dp"
         app:text="手机号">
     </view.InputText>
-    <view.InputText
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:text="密码">
-    </view.InputText>
+        android:layout_height="50dp">
+        <view.InputText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:text="密码">
+        </view.InputText>
+        <TextView
+            android:layout_gravity="right"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:paddingTop="10dp"
+            android:layout_marginTop="10dp"
+            android:textSize="12sp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="忘记密码"/>
+    </RelativeLayout>
+
+
     <Button
         android:id="@+id/login_login_btn"
         android:layout_width="match_parent"
