--- a/app/src/main/res/layout/fragment_user_page.xml
+++ b/app/src/main/res/layout/fragment_user_page.xml
@@ -12,9 +12,18 @@
         android:orientation="vertical"
         android:layout_height="200dp">
         <ImageView
+            android:id="@+id/up_user_head"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:background="@color/white"/>
+        <TextView
+            android:id="@+id/up_user_name"
+            android:layout_marginTop="10dp"
+            android:textSize="16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="登录/注册"/>
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/up_rv"
