--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="trans">#00000000</color>    <!-- 透明色 -->
     <color name="lineColor">#D6D6D6</color> <!-- 分割线颜色 -->
     <color name="mainBackgroundColor">#F8F8F8</color> <!-- 背景颜色 -->
+    <color name="inputBackground">#FAFAFA</color>
 </resources>
