--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@color/mainBackgroundColor"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -12,11 +14,44 @@
         </android.support.v4.view.ViewPager>
         <LinearLayout
             android:id="@+id/home_vp_pointer"
+            android:orientation="horizontal"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:layout_height="10dp"/>
+            android:layout_height="10dp"/>  <!-- 指示器 -->
     </RelativeLayout>
-
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="80dp">
+        <Button
+            android:id="@+id/home_release_btn"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/shape_release_task_btn"
+            android:textColor="@color/white"
+            android:textSize="23dp"
+            android:text="发布任务"/>
+        <Button
+            android:id="@+id/home_accept_btn"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/shape_accept_task_btn"
+            android:textColor="@color/white"
+            android:textSize="23dp"
+            android:text="接受任务"/>
+    </LinearLayout>
 </LinearLayout>
