--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -15,10 +15,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/ao_type"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:background="@drawable/shape_order_type"/>
+        <TextView
             android:id="@+id/ao_title"
             android:layout_width="0dp"
             android:layout_weight="3"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:textStyle="bold"
             android:text="标题"
             android:textSize="16sp"/>
