--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -6,11 +6,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context="com.edu.schooltask.ReleaseActivity">
     <include layout="@layout/toolbar"/>
     <view.InputText
+        android:id="@+id/release_school"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:text="标题">
+        app:text="学校"
+        app:hint="请输入学校">
     </view.InputText>
+    <view.InputText
+        android:id="@+id/release_title"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:text="标题"
+        app:hint="请输入任务标题">
+    </view.InputText>
+    <view.Content
+        android:id="@+id/release_content"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_margin="10dp"
+        app:maxLength="200"
+        app:contentHint="任务内容，请尽量描述任务详细要求">
+    </view.Content>
+    <view.InputText
+        android:id="@+id/release_cost"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:text="金额"
+        app:hint="任务金额(￥)，不少于1元钱">
+    </view.InputText>
+    <view.InputText
+        android:id="@+id/release_limit_time"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:text="时限"
+        app:hint="任务发布后有效的时间(小时)">
+    </view.InputText>
+    <Button
+        android:id="@+id/release_release"
+        android:layout_margin="20dp"
+        android:background="@drawable/shape_theme_btn"
+        android:layout_width="match_parent"
+        android:textColor="@color/white"
+        android:layout_height="40dp"
+        android:text="发布"/>
 </LinearLayout>
