--- a/app/src/main/res/layout/fragment_all_order.xml
+++ b/app/src/main/res/layout/fragment_all_order.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <view.OrderTypeMenu
+        android:elevation="1dp"
+        android:id="@+id/ao_menu"
+        android:layout_width="match_parent"
+        android:layout_height="30dp">
+    </view.OrderTypeMenu>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/ao_srl"
         android:layout_width="match_parent"
@@ -14,4 +20,4 @@
         </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+</RelativeLayout>
