--- a/app/src/main/res/layout/fragment_register_phone.xml
+++ b/app/src/main/res/layout/fragment_register_phone.xml
@@ -8,7 +8,8 @@
         android:id="@+id/rpf_id"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:text="手机号">
+        app:text="手机号"
+        app:hint="请输入手机号,将作为登录的用户名">
     </view.InputText>
     <LinearLayout
         android:layout_width="match_parent"
