--- a/app/src/main/res/layout/fragment_wait_assess.xml
+++ b/app/src/main/res/layout/fragment_wait_assess.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v4.widget.SwipeRefreshLayout
@@ -8,8 +8,20 @@
         android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/wa_rv"
+            android:fadingEdge="none"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+    <TextView
+        android:id="@+id/wa_tip"
+        android:layout_marginTop="100dp"
+        android:gravity="center_horizontal"
+        android:elevation="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="没有订单"
+        android:textColor="@color/hintColor"
+        android:visibility="invisible"/>
+</RelativeLayout>
