--- a/app/src/main/res/layout/view_order_type_menu.xml
+++ b/app/src/main/res/layout/view_order_type_menu.xml
@@ -15,43 +15,73 @@
             android:id="@+id/otm_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             app:itemText="所  有"/>
         <view.MenuItem
             android:id="@+id/otm_wait_pay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             app:itemText="待支付"/>
         <view.MenuItem
             android:id="@+id/otm_wait_accept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             app:itemText="待接单"/>
+        <view.MenuItem
+            android:id="@+id/otm_wait_finish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            app:itemText="待完成"/>
         <view.MenuItem
             android:id="@+id/otm_wait_assess"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             app:itemText="待评价"/>
         <view.MenuItem
             android:id="@+id/otm_assess_finish"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             app:itemText="已评价"/>
         <view.MenuItem
             android:id="@+id/otm_unless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             app:itemText="已失效"/>
         <view.MenuItem
             android:id="@+id/otm_cancle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             app:itemText="已取消"/>
     </LinearLayout>
 </HorizontalScrollView>
