--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             app:inputType="password"
-            app:hint="请输入密码，至少6位"
+            app:hint="请输入密码"
             app:text="密码">
         </view.InputText>
         <TextView
