--- a/app/src/main/res/layout/fragment_wait_assess.xml
+++ b/app/src/main/res/layout/fragment_wait_assess.xml
@@ -16,12 +16,11 @@
     </android.support.v4.widget.SwipeRefreshLayout>
     <TextView
         android:id="@+id/wa_tip"
-        android:layout_marginTop="100dp"
         android:gravity="center_horizontal"
+        android:paddingTop="100dp"
         android:elevation="1dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="没有订单"
-        android:textColor="@color/hintColor"
-        android:visibility="invisible"/>
+        android:text="请先登录"
+        android:textColor="@color/hintColor"/>
 </RelativeLayout>
