--- a/app/src/main/res/layout/rv_pt.xml
+++ b/app/src/main/res/layout/rv_pt.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="35dp">
-    <View
-        android:background="@color/white"
+    android:layout_height="wrap_content">
+    <com.edu.schooltask.view.ViewPagerTab
+        android:id="@+id/home_tab"
         android:layout_width="match_parent"
-        android:layout_height="35dp"/>
+        android:layout_height="35dp">
+    </com.edu.schooltask.view.ViewPagerTab>
 </LinearLayout>
