--- a/app/src/main/res/layout/item_near_task.xml
+++ b/app/src/main/res/layout/item_near_task.xml
@@ -85,7 +85,9 @@
             android:layout_weight="1"/>
     </LinearLayout>
     <View
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
         android:background="@color/lineColor"/>
