--- a/app/src/main/res/layout/view_viewpager_tab.xml
+++ b/app/src/main/res/layout/view_viewpager_tab.xml
@@ -3,6 +3,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/lineColor"/>
     <LinearLayout
         android:id="@+id/vt_layout"
         android:orientation="horizontal"
