--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -13,6 +13,7 @@
             android:id="@+id/home_rv"
             android:fadingEdge="none"
             android:overScrollMode="never"
+            android:background="@color/mainBackgroundColor"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
