--- a/app/src/main/res/layout/item_order_wait_assess.xml
+++ b/app/src/main/res/layout/item_order_wait_assess.xml
@@ -21,13 +21,11 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/owa_title"
+                android:id="@+id/owa_content"
                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="标题"
-                android:textSize="16sp"/>
+                android:text="内容"/>
 
             <Button
                 android:id="@+id/owa_assess_btn"
