--- a/app/src/main/res/layout/activity_money.xml
+++ b/app/src/main/res/layout/activity_money.xml
@@ -4,13 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/toolbar"/>
+    <TextView
+        android:padding="5dp"
+        android:text="温馨提示：在您使用转出功能时请务必核对转出账户"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:background="@color/colorPrimary"
         android:orientation="vertical"
-        android:layout_marginTop="30dp"
         android:layout_height="180dp">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
