--- a/app/src/main/res/layout/fragment_wait_assess.xml
+++ b/app/src/main/res/layout/fragment_wait_assess.xml
@@ -19,6 +19,7 @@
         android:gravity="center_horizontal"
         android:paddingTop="100dp"
         android:elevation="1dp"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="请先登录"
