//完成接单逻辑、加入弹出框架

--- a/app/src/main/res/layout/fragment_all_order.xml
+++ b/app/src/main/res/layout/fragment_all_order.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/ao_rv"
+            android:background="@color/white"
             android:fadingEdge="none"
             android:overScrollMode="never"
             android:layout_width="match_parent"
@@ -23,12 +24,11 @@
     </android.support.v4.widget.SwipeRefreshLayout>
     <TextView
         android:id="@+id/ao_tip"
-        android:gravity="center_horizontal"
-        android:paddingTop="100dp"
-        android:elevation="1dp"
+        android:layout_centerHorizontal="true"
         android:background="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="请先登录"
         android:textColor="@color/hintColor"/>
 </RelativeLayout>
