--- a/app/src/main/res/layout/activity_money.xml
+++ b/app/src/main/res/layout/activity_money.xml
@@ -8,7 +8,9 @@
         android:padding="5dp"
         android:text="温馨提示：在您使用转出功能时请务必核对转出账户"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
+        android:background="@color/mainBackgroundColor"
+        android:gravity="center_vertical"
         android:textSize="12sp"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +24,7 @@
             android:layout_marginLeft="30dp"
             android:text="账户余额(元)"
             android:textColor="@color/white"
-            android:textSize="18dp"
+            android:textSize="16dp"
             android:gravity="center"
             android:id="@+id/textView2" />
 
@@ -35,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:textSize="60dp"
+                android:textSize="40dp"
                 android:gravity="center" />
             <ProgressBar
                 android:layout_centerInParent="true"
