--- a/app/src/main/res/layout/fragment_wait_assess.xml
+++ b/app/src/main/res/layout/fragment_wait_assess.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/wa_srl"
@@ -10,18 +11,18 @@
             android:id="@+id/wa_rv"
             android:fadingEdge="none"
             android:overScrollMode="never"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
     <TextView
         android:id="@+id/wa_tip"
-        android:gravity="center_horizontal"
-        android:paddingTop="100dp"
-        android:elevation="1dp"
+        android:layout_centerHorizontal="true"
         android:background="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="请先登录"
         android:textColor="@color/hintColor"/>
 </RelativeLayout>
