--- a/app/src/main/res/layout/item_near_task.xml
+++ b/app/src/main/res/layout/item_near_task.xml
@@ -32,17 +32,19 @@
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/nt_school"
-            android:layout_alignTop="@id/nt_name"
-            android:layout_alignLeft="@id/nt_sex"
-            android:layout_marginLeft="10dp"
+            android:layout_below="@id/nt_name"
+            android:layout_marginTop="3dp"
+            android:layout_alignLeft="@id/nt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="12sp"
             android:text="学校"/>
         <TextView
             android:id="@+id/nt_release_time"
             android:layout_marginTop="3dp"
             android:textSize="12sp"
-            android:layout_alignLeft="@id/nt_name"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/nt_name"
             android:layout_below="@id/nt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
