--- a/app/src/main/res/layout/item_order_wait_assess.xml
+++ b/app/src/main/res/layout/item_order_wait_assess.xml
@@ -54,7 +54,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="@color/lineColor"/>
+            android:background="@color/orderDivide"/>
     </LinearLayout>
 
 </LinearLayout>
