--- a/app/src/main/res/layout/view_image_display_item.xml
+++ b/app/src/main/res/layout/view_image_display_item.xml
@@ -5,13 +5,14 @@
     android:layout_height="50dp">
     <ImageView
         android:id="@+id/idi_image"
-        android:background="@color/lineColor"
+        android:background="@color/black"
         android:layout_width="50dp"
         android:layout_height="50dp" />
     <ImageView
         android:id="@+id/idi_delete"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
+        android:background="@color/lineColor"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/ic_action_delete_image"/>
