--- a/app/src/main/res/layout/view_viewpager_tab.xml
+++ b/app/src/main/res/layout/view_viewpager_tab.xml
@@ -14,6 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/lineColor"/>
     <LinearLayout
         android:id="@+id/vt_point_layout"
         android:orientation="horizontal"
