--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="releaseColor">#1b9dff</color>  <!-- 发布颜色 -->
     <color name="acceptColor">#FFA500</color>  <!-- 接受颜色 -->
     <color name="black">#000000</color>
+    <color name="orderDivide">#F3F3F3</color>
 </resources>
