--- a/app/src/main/res/layout/fragment_order_page.xml
+++ b/app/src/main/res/layout/fragment_order_page.xml
@@ -15,7 +15,7 @@
             android:textColor="@color/white"
             android:gravity="center"
             android:textSize="18sp"
-            app:layout_scrollFlags="scroll|snap"/>
+            app:layout_scrollFlags="scroll|enterAlways"/>
     </android.support.design.widget.AppBarLayout>
     <LinearLayout
         android:layout_width="match_parent"
