//增加各种订单操作

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -36,9 +36,9 @@
                     android:layout_height="70dp"/>
                 <TextView
                     android:id="@+id/user_name"
+                    android:layout_marginBottom="65dp"
                     android:layout_centerHorizontal="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="60dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
@@ -66,6 +66,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="?attr/actionBarSize"
                 android:src="@drawable/ic_action_back"
+                app:layout_collapseMode="pin"/>
+            <TextView
+                android:id="@+id/user_edit_btn"
+                android:layout_gravity="right"
+                android:textColor="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:layout_marginRight="10dp"
+                android:background="?attr/selectableItemBackground"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                android:text="编辑"
                 app:layout_collapseMode="pin"/>
         </android.support.design.widget.CollapsingToolbarLayout>
 
