--- a/app/src/main/res/layout/dialog_yesno.xml
+++ b/app/src/main/res/layout/dialog_yesno.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/yes_no_title"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center"
@@ -14,11 +15,26 @@
         android:layout_height="0.1dp"
         android:background="@color/lineColor"/>
     <TextView
-        android:padding="20dp"
+        android:id="@+id/yes_no_content"
+        android:paddingTop="20dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="我是内容"/>
+    <TextView
+        android:paddingTop="10dp"
+        android:paddingBottom="20dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:id="@+id/yes_no_hint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="12sp"
+        android:text="提示"
+        android:textColor="@color/hintColor"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
@@ -28,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp">
         <TextView
-            android:id="@+id/dialog_yesno_no"
+            android:id="@+id/yes_no_no"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:gravity="center"
@@ -40,7 +56,7 @@
             android:layout_height="match_parent"
             android:background="@color/lineColor"/>
         <TextView
-            android:id="@+id/dialog_yesno_yes"
+            android:id="@+id/yes_no_yes"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:gravity="center"
