--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -67,7 +67,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="@color/orderDivide"/>
+            android:background="@color/divide"/>
     </LinearLayout>
 
 </LinearLayout>
