--- a/app/src/main/res/layout/view_order_type_menu.xml
+++ b/app/src/main/res/layout/view_order_type_menu.xml
@@ -39,6 +39,15 @@
             android:layout_marginRight="5dp"
             app:itemText="待完成"/>
         <com.edu.schooltask.view.MenuItem
+            android:id="@+id/otm_wait_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            app:itemText="待确认"/>
+        <com.edu.schooltask.view.MenuItem
             android:id="@+id/otm_wait_assess"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
