//增加订单评论 暂时备份用于重构

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,4 +15,9 @@
     <declare-styleable name="MenuItem">
         <attr name="itemText" format="string"/>
     </declare-styleable>
+
+    <declare-styleable name="InputBoard">
+        <attr name="inputHint" format="string"/>
+        <attr name="btnText" format="string"/>
+    </declare-styleable>
 </resources>
