--- a/app/src/main/res/layout/item_look_count.xml
+++ b/app/src/main/res/layout/item_look_count.xml
@@ -3,18 +3,20 @@
     android:orientation="horizontal"
     android:paddingTop="10dp"
     android:paddingLeft="20dp"
+    android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
+        android:id="@+id/lc_comment_count"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/hintColor"
         android:textSize="12sp"
-        android:text="评论"/>
+        android:text="评论(0)"/>
     <TextView
         android:layout_alignParentRight="true"
-        android:id="@+id/ln_look_num"
+        android:id="@+id/lc_look_count"
         android:gravity="center_vertical"
         android:textColor="@color/hintColor"
         android:layout_width="wrap_content"
@@ -23,8 +25,9 @@
         android:layout_marginRight="20dp"
         android:text="浏览"/>
     <ImageView
-        android:layout_alignTop="@id/ln_look_num"
-        android:layout_toLeftOf="@id/ln_look_num"
+        android:layout_alignTop="@id/lc_look_count"
+        android:layout_alignBottom="@id/lc_look_count"
+        android:layout_toLeftOf="@id/lc_look_count"
         android:src="@drawable/ic_action_look_num"
         android:layout_width="20dp"
         android:layout_height="20dp" />
